--- a/react-jike/package.json
+++ b/react-jike/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@toast-ui/editor": "^3.2.2",
+    "@toast-ui/react-editor": "^3.2.3",
     "antd": "^5.24.2",
     "axios": "^1.4.0",
     "echarts": "^5.6.0",
